--- a/style.css
+++ b/style.css
@@ -87,11 +87,24 @@ html {
 
 .title {
   font-size: 30px;
-  margin-bottom: 230px;
+  margin-bottom: 150px;
 }
 
 .mod-text {
   color: red;
+}
+
+.playBtn {
+  padding: 5px 25px;
+  font-size: 25px;
+  text-decoration: none;
+  color: black;
+  background-color: orange;
+  border-radius: 10px;
+}
+
+.about {
+  margin-top: 45px;
 }
 
 .about__description {
